[tool.poetry]
name = "distiller"
version = "0.1.0"
description = ""
authors = ["chapman <chapman.siu@btcx.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<4.0"
mako = "^1.3.2"
sqlalchemy = "^2.0.27"
sqlfluff = "^2.3.5"
pydantic = "^2.6.3"


[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
pytest-cov = "^4.1.0"
ruff = "^0.2.1"
pandas = "^2.2.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.coverage.run]
omit = ["tests/*", "scripts/*"]

[tool.ruff]
line-length = 120
indent-width = 4

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "I001"]
